--- a/index.css
+++ b/index.css
@@ -14,9 +14,6 @@ body {
   .topnav {
     
     background-color: #000000;
-
-    
-
     height: 15vh;
     width: 100%;
     align-items: center;
@@ -24,6 +21,7 @@ body {
     position: fixed;
     top: -26px;
     overflow: hidden;
+    
     
   }
   
@@ -66,7 +64,7 @@ body {
     font-size: 60px;
     font-weight: 400;
     
-    margin-top: -900px;
+    margin-top: -100px;
     margin-left: 400px;;
     display :flex;
     justify-content: center;
@@ -115,6 +113,8 @@ body {
     top:0;
     position: relative;
     animation :slide  12s steps(4) infinite; 
+
+    
 }
 
 @keyframes slide{
@@ -128,8 +128,8 @@ position: relative;
 }
 
 .dynamic-txt li::after{
-    content: "";
-    position: absolute;
+    content:"";
+    position:absolute;
     left: 0;
     height: 100%;
     width: 100%;
@@ -170,7 +170,7 @@ position: relative;
   }
  
   .topbox{
-    position: relative;
+    position:relativ;
     width: 1200px; 
     height: 250px;
     margin-top: 90px ;
@@ -179,7 +179,7 @@ position: relative;
  
  }
   .topbox .firstbox{
-     position: relative;
+     position:static;
      width: calc(400px - 30px);
      height: calc(200px-30px);
      background-color: #26b583;
@@ -209,7 +209,7 @@ position: relative;
  /* second box */
  
   .topbox .secondbox{
-     position: relative;
+     position: static;
      width: calc(400px - 30px);
      height: calc(300px-30px);
      background-color: #88d621;
@@ -239,7 +239,7 @@ position: relative;
  /* third box */
  
   .topbox .thirdbox{
-     position: relative;
+     position: static;
      width: calc(400px - 30px);
      height: calc(300px-30px);
      background-color: #2581d6;
@@ -456,7 +456,6 @@ form{
     text-align: center;
     margin-top: 110px;
 }
-
 
 
 
